test/bad/global-conflict.fnl
(local x 1)
(global x 2)
